Created patient history component and completed appointment component

--- a/src/app/hospital/hospital.component.html
+++ b/src/app/hospital/hospital.component.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <input type="submit" class="btn btn-success" value="Submit" (click)="display();">&nbsp;
+            <input type="submit" class="btn btn-success" value="Submit" (click)="submit();">&nbsp;
             <input type="reset" class="btn btn-default" value="Reset">
         </div>
     </div>
