--- a/src/app/hospital/hospital.component.html
+++ b/src/app/hospital/hospital.component.html
@@ -1,44 +1,127 @@
 <app-header></app-header>
-<!-- Hospital Form: Name, Address, Email, Contact No, Person of Contact, Password  -->
-<section id="hospital-form" class="mt-5 ml-5 col-md-10">
+<div class="container-fluid" style="margin-bottom: 100px;">
+  <!--
+    Hospital Form: Name, Address, Email, Contact No, Person of Contact, Password
+  -->
+  <section id="hospital-form" class="mt-5 ml-5 col-md-10">
     <h3>Register Hospital</h3>
-    <br>
+    <br />
     <form method="post" #addHospital="ngForm">
-    <div class="form-horizontal panel-body row">
+      <div class="form-horizontal panel-body row">
         <div class="col-md-6">
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" id="txtName" name="txtName" [(ngModel)]="objHospital['Name']" #txtName="ngModel" class="form-control" placeholder="Name of hospital">
-            </div>
-            <div class="form-group">
-                <label>Email</label>
-                <input type="email" id="txtEmail" name="txtEmail" [(ngModel)]="objHospital['Email']" #txtEmail="ngModel" class="form-control" placeholder="Email id">
-            </div>
-            <div class="form-group">
-                <label>Contact No</label>
-                <input type="text" id="txtContactNo" name="txtContactNo" [(ngModel)]="objHospital['ContactNo']" #txtContactNo="ngModel" class="form-control" placeholder="Contact number of hospital">
-            </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input
+              type="text"
+              id="txtName"
+              name="txtName"
+              [(ngModel)]="objHospital['Name']"
+              #txtName="ngModel"
+              class="form-control"
+              placeholder="Name of hospital"
+            />
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input
+              type="email"
+              id="txtEmail"
+              name="txtEmail"
+              [(ngModel)]="objHospital['Email']"
+              #txtEmail="ngModel"
+              class="form-control"
+              placeholder="Email id"
+            />
+          </div>
+          <div class="form-group">
+            <label>Contact No</label>
+            <input
+              type="text"
+              id="txtContactNo"
+              name="txtContactNo"
+              [(ngModel)]="objHospital['ContactNo']"
+              #txtContactNo="ngModel"
+              class="form-control"
+              placeholder="Contact number of hospital"
+            />
+          </div>
         </div>
         <div class="col-md-6">
-            <div class="form-group">
-                <label>Person of Contact</label>
-                <input type="text" id="txtContactPerson" name="txtContactPerson" [(ngModel)]="objHospital['PersonOfContact']" #txtContactPerson="ngModel" class="form-control" placeholder="Person of contact">
-            </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" id="txtPassword" name="txtPassword" [(ngModel)]="objHospital['Password']" #txtPassword="ngModel" class="form-control" placeholder="Password for hospital to login">
-            </div>
-            <div class="form-group">
-                <label>Address</label>
-                <textarea id="txtAddress" name="txtAddress" [(ngModel)]="objHospital['Address']" #txtAddress="ngModel" class="form-control" placeholder="Address of hospital"></textarea>
-            </div>
+          <div class="form-group">
+            <label>Person of Contact</label>
+            <input
+              type="text"
+              id="txtContactPerson"
+              name="txtContactPerson"
+              [(ngModel)]="objHospital['PersonOfContact']"
+              #txtContactPerson="ngModel"
+              class="form-control"
+              placeholder="Person of contact"
+            />
+          </div>
+          <div class="form-group">
+            <label>Password</label>
+            <input
+              type="password"
+              id="txtPassword"
+              name="txtPassword"
+              [(ngModel)]="objHospital['Password']"
+              #txtPassword="ngModel"
+              class="form-control"
+              placeholder="Password for hospital to login"
+            />
+          </div>
+          <div class="form-group">
+            <label>Address</label>
+            <textarea
+              id="txtAddress"
+              name="txtAddress"
+              [(ngModel)]="objHospital['Address']"
+              #txtAddress="ngModel"
+              class="form-control"
+              placeholder="Address of hospital"
+            ></textarea>
+          </div>
         </div>
         <div class="col-md-6">
-            <input type="submit" class="btn btn-success" value="Submit" (click)="submit();">&nbsp;
-            <input type="reset" class="btn btn-default" value="Reset">
+          <input
+            type="submit"
+            class="btn btn-success"
+            value="Submit"
+            (click)="submit()"
+          />&nbsp; <input type="reset" class="btn btn-default" value="Reset" />
         </div>
+      </div>
+    </form>
+  </section>
+  <!--
+    Hospital Form: Name, Address, Email, Contact No, Person of Contact, Password
+  -->
+  <br />
+  <section id="hospitalDataSection">
+    <div class="container">
+      <table class="table table-bordered table-hover">
+        <thead class="table-dark text-white">
+          <tr>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Email</th>
+            <th>Contact No</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of hospitalArr">
+            <td>{{ item.name }}</td>
+            <td>{{ item.address }}</td>
+            <td>{{ item.email }}</td>
+            <td>{{ item.contactNo }}</td>
+            <td>{{ item.active }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  </form>
-</section>
-<!-- Hospital Form: Name, Address, Email, Contact No, Person of Contact, Password  -->
+  </section>
+</div>
+
 <app-footer></app-footer>
