login service call started working

--- a/src/app/hospital/hospital.component.html
+++ b/src/app/hospital/hospital.component.html
@@ -15,7 +15,7 @@
               type="text"
               id="txtName"
               name="txtName"
-              [(ngModel)]="objHospital['Name']"
+              [(ngModel)]="objHospital.name"
               #txtName="ngModel"
               class="form-control"
               placeholder="Name of hospital"
@@ -27,7 +27,7 @@
               type="email"
               id="txtEmail"
               name="txtEmail"
-              [(ngModel)]="objHospital['Email']"
+              [(ngModel)]="objHospital.email"
               #txtEmail="ngModel"
               class="form-control"
               placeholder="Email id"
@@ -39,7 +39,7 @@
               type="text"
               id="txtContactNo"
               name="txtContactNo"
-              [(ngModel)]="objHospital['ContactNo']"
+              [(ngModel)]="objHospital.contactNo"
               #txtContactNo="ngModel"
               class="form-control"
               placeholder="Contact number of hospital"
@@ -53,7 +53,7 @@
               type="text"
               id="txtContactPerson"
               name="txtContactPerson"
-              [(ngModel)]="objHospital['PersonOfContact']"
+              [(ngModel)]="objHospital.personToContact"
               #txtContactPerson="ngModel"
               class="form-control"
               placeholder="Person of contact"
@@ -65,7 +65,7 @@
               type="password"
               id="txtPassword"
               name="txtPassword"
-              [(ngModel)]="objHospital['Password']"
+              [(ngModel)]="objHospital.password"
               #txtPassword="ngModel"
               class="form-control"
               placeholder="Password for hospital to login"
@@ -76,7 +76,7 @@
             <textarea
               id="txtAddress"
               name="txtAddress"
-              [(ngModel)]="objHospital['Address']"
+              [(ngModel)]="objHospital.address"
               #txtAddress="ngModel"
               class="form-control"
               placeholder="Address of hospital"
