--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,7 +36,15 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-light" href="#" id="navDDAppointments" role="button" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Hello, {{fullName}}
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Logout</a>
+              </div>
+          </li>
         </form>
     </div>
 </nav>
