--- a/src/app/hospital/hospital.component.html
+++ b/src/app/hospital/hospital.component.html
@@ -85,11 +85,20 @@
         </div>
         <div class="col-md-6">
           <input
+            *ngIf="addHospitalTask"
             type="submit"
             class="btn btn-success"
             value="Submit"
             (click)="submit()"
-          />&nbsp; <input type="reset" class="btn btn-default" value="Reset" />
+          />
+          <input
+            *ngIf="editHospitalTask"
+            type="submit"
+            class="btn btn-success"
+            value="Update"
+            (click)="update()"
+          />
+          &nbsp; <input type="reset" class="btn btn-default" value="Reset" />
         </div>
       </div>
     </form>
@@ -97,9 +106,11 @@
   <!--
     Hospital Form: Name, Address, Email, Contact No, Person of Contact, Password
   -->
-  <br />
+  <br /><hr><br>
   <section id="hospitalDataSection">
-    <div class="container">
+    <div class="container text-center">
+        <h2>All Hospitals Data</h2>
+        <br>
       <table class="table table-bordered table-hover">
         <thead class="table-dark text-white">
           <tr>
@@ -108,6 +119,8 @@
             <th>Email</th>
             <th>Contact No</th>
             <th>Status</th>
+            <th>Edit</th>
+            <th>Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -117,6 +130,8 @@
             <td>{{ item.email }}</td>
             <td>{{ item.contactNo }}</td>
             <td>{{ item.active }}</td>
+            <td><a (click)="editHospital(item)">Edit</a></td>
+            <td><a (click)="deleteHospital(item.id)">Delete</a></td>
           </tr>
         </tbody>
       </table>
