--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -68,7 +68,8 @@
             <th>Address</th>
             <th>Email</th>
             <th>Contact No</th>
-            <!-- <th>Status</th> -->
+            <th>Edit</th>
+            <th>Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -77,7 +78,8 @@
             <td>{{ item.address }}</td>
             <td>{{ item.email }}</td>
             <td>{{ item.contactNo }}</td>
-            <!-- <td>{{ item.active }}</td> -->
+            <td><a (click)="editPatient()">Edit</a></td>
+            <td><a (click)="deletePatient()">Delete</a></td>
           </tr>
         </tbody>
       </table>
