Add Patient Completed

--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -29,7 +29,7 @@
               type="text"
               class="form-control"
               placeholder="Contact number of patient"
-              [(ngModel)]="objPatient.contactNo"
+              [(ngModel)]="objPatient.cno"
               #txtContactNo="ngModel"
               name="txtContactNo"
             />
@@ -68,7 +68,6 @@
             <th>Address</th>
             <th>Email</th>
             <th>Contact No</th>
-            <th>Edit</th>
             <th>Delete</th>
           </tr>
         </thead>
@@ -76,8 +75,7 @@
           <tr *ngFor="let item of patientArr">
             <td>{{ item.name }}</td>
             <td>{{ item.address }}</td>
-            <td>{{ item.email }}</td>
-            <td>{{ item.contactNo }}</td>
+            <td>{{ item.cno }}</td>
             <td><a (click)="editPatient()">Edit</a></td>
             <td><a (click)="deletePatient()">Delete</a></td>
           </tr>
