--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer bg-dark pt-3 pb-3 text-light" style="position: fixed; width:100%; bottom:0px;">
-    &nbsp;&copy; ABC solutions.
+    &nbsp;&copy; Designed and Developed by : Ritesh Tailor, Vishant Akhani, Ankit Boghra, Manish Magnani, Parth Patel
 </div>
